v0.8.2

Changes
-------
Improved yank and undo alloc'ing. Malloc as much we need from start in batches and avoid small mallocs.
Disable mouse in mode other than NORMAL_MODE
UNDO of :fsum is handled by let.
:fsum added to command mode commands. was missing.
Added mapping_timeout configuration value with a default value of 1500ms (used to be a fixed value of 800ms).
Added mouse support in insert and command mode. The selection of a cell gets copied to inputbar.


Pending
-------
Rethink LUA evaluation


Thanks to all that helped and created PR.
Thanks to all who support and use this program.

Andrés Martinelli
andmarti1424



***********
v0.8.1
Released April 1st 2021

New features
------------
Braille support
Added latex export - issue #394
Added mappings for command mode
Work on issues #225 and #247: support mapping of ñ and other special chars
Basic ODS file import
Paste to a range of selected cells - (actually added on v0.8 - issue 438 - PR 445)
Added txtdelim | for csv files import - issue 409
Added macros to --version (show version)
Support higher versions of lua.
Handle <ESC> key in mappings. related to issue #492.
Added freeze to visual mode - issue #459

Changes
--------
Recognise <SPACE> in mappings rather than simple ' '
Visual change: Moved cmd multiplier to the left of mode
Changed default headings colors
many improvements to the config facility and usage - PR 519
improved sort for 65k rows

Fixes
-----
Fix issues on CIRCULAR REFERENCES: #473 #201 #475 #321. these were as hard.
Fix issue 417 and added a date type in xlsx import.
Fix Engformat overlap text y número. Mostraba * (actually fixed on v0.8)
Fix column header display - overflow with column width 2 and column with two letters - PR 517
Fix isnumeric test to recognise floats: affects copy/paste - PR 450
Fix issue setting conf variables like nonumeric
Fix when showing empty text - 944844505d7cdb7d3d392a5c1d2b3ffde40a1fff