@@ -6,8 +6,9 @@ Improved yank and undo alloc'ing. Malloc as much we need from start in batches a
 Disable mouse in mode other than NORMAL_MODE
 UNDO of :fsum is handled by let.
 :fsum added to command mode commands. was missing.
-Added mapping_timeout configuration value with a default value of 1500ms (used to be a fixed value of 800ms).
+Added mapping_timeout configuration variable with a default value of 1500ms (used to be a fixed value of 800ms).
 Added mouse support in insert and command mode. The selection of a cell gets copied to inputbar.
+Added command_timeout configuration variable.
 
 
 Pending
